<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragment.SettingFragment">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_getPower"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/current_power" />
            <EditText
                android:id="@+id/et_setPower"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="2"
                android:hint="@string/enter_power" />

            <Button
                android:id="@+id/btn_setPower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_power" />
        </LinearLayout>



        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stand_fre"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/european"
                android:id="@+id/EU"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EU3"
                android:text="@string/european3"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Chinese"
                android:text="@string/Chinese"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Ukraine"
                android:text="@string/Urk"/>

        </RadioGroup>
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_title1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starting_frequency"/>
            <TextView
                android:id="@+id/tv_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/cutoff_frequency"/>
            <Spinner
                android:id="@+id/spinner_start"

                android:layout_width="150dp"
                android:layout_height="30dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_title1"
                app:layout_constraintStart_toStartOf="parent"/>

            <Spinner
                android:id="@+id/spinner_end"
                android:layout_width="150dp"
                android:layout_height="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title2" />
            <Button
                android:id="@+id/setFreq"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_start"/>
            <Button
                android:id="@+id/getF"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_end"/>

        </android.support.constraint.ConstraintLayout>
        <View
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#C0BFBF"/>






        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/spinner_mask_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/spinner_mask_area"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mask_list"
                app:layout_constraintEnd_toStartOf="@+id/spinner_mask_data"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <Spinner
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/spinner_mask_data"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                />
        </android.support.constraint.ConstraintLayout>
        <EditText
            android:id="@+id/edt_maskStartAddr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="3"
            android:hint="@string/mask_start"/>
        <EditText
            android:visibility="gone"
            android:id="@+id/edt_maskLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            android:hint="@string/mask_len"/>
        <EditText
            android:id="@+id/edt_maskData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789abcdefABCEDFG"
            android:hint="@string/mask_data"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_configMask"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/set_mask"/>
            <Button
                android:id="@+id/btn_getMask"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/clear_mask"/>
        </LinearLayout>





    </LinearLayout>
</ScrollView>
